@@ -2,6 +2,7 @@ Pending changes
 ===============
 
 * Renaming to "Palanthir"
+* Access to multi-frame images
 * Access to the raw PNG images (in 8bpp and 16bpp)
 * Security: Support of SSL, HTTP Basic Authentication and interdiction
   of remote access
